Attempt to fix overflow issue

--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body {
   background-color: #4a5956;
 }
 
+.overlay {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    overflow-x: hidden;
+}
+
 footer {
   position: fixed;
   bottom: 0;
